--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
     </div>
 
     <!-- list of games funded by Sea Monster -->
-    <h2>Our Games</h2>
-    <p>Check out each of our games below!</p>
+    <h2 id="our_games">Our Games</h2>
+
+    <p  id="check_out">Check out each of our games below!</p>
     <div id="button-container">
         <button id="unfunded-btn">Show Unfunded Only</button>
         <button id="funded-btn">Show Funded Only</button>
@@ -59,6 +60,6 @@
 
     </div>
 
-    <script type="module" src="index.js"></script>
+    <script type="module" src="index.js" >  </script>
   </body>
 </html>
